# kate-quick-open-plugin

./: CMakeLists.txt
cmake/support/: new_class_tester_wrapper.sh.in
src/: CMakeLists.txt  files_index.cpp  files_index.h  katequickopenplugin.desktop  path_config.ui  quick_open_plugin.cpp  quick_open_plugin.h  quick_open_plugin_config_page.cpp  quick_open_plugin_config_page.h  quick_open_plugin_view.cpp  quick_open_plugin_view.h  ui.rc
src/test/: CMakeLists.txt  directory_scanner_tester.cpp
